[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "jobmon_client"
description="A dependency management utility with retires and resource management for HPC computation."
# The following line needs to be upaatd to the correct version number on each release
version = "3.3.0"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'jobmon_core',
    'numpy',
    'pandas',
    'pyyaml',
    'tabulate',
]
# The following line "should" work but must be commented out when using an expliciate version number
# dynamic = ["version"]

[project.scripts]
jobmon = "jobmon.client.cli:main"

[project.optional-dependencies]
server = ["jobmon_server"]
ihme = ["jobmon_installer_ihme"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"
git_describe_command = [
    'git',
    'describe',
    '--dirty',
    '--tags',
    '--long',
    '--match',
    'client-[0-9]*',  # only match on tags prefixed with this subdirectory tags
]
