[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "jobmon_core"
description="Shared functionality for Jobmon Namespace Packages"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'aiohttp',
    'pyyaml',
    'psutil',
    'requests',
    'tenacity>=8.1',
    'docstring-parser',
    'grpcio<=1.64.1',
    'docutils',
    'sphinx',
    'python-dotenv',
]
dynamic = ["version"]

[project.scripts]
jobmon_config = "jobmon.core.configuration:main"
jobmon_distributor = "jobmon.distributor.cli:main"
worker_node_entry_point = "jobmon.worker_node.cli:run"

[project.optional-dependencies]
otlp = [
    'opentelemetry-api',
    'opentelemetry-sdk',
    'opentelemetry-instrumentation',
    'opentelemetry-instrumentation-fastapi',
    'opentelemetry-instrumentation-requests',
    'opentelemetry-exporter-otlp'
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"
git_describe_command = [
    'git',
    'describe',
    '--dirty',
    '--tags',
    '--long',
    '--match',
    'core-[0-9]*',  # only match on tags prefixed with this subdirectory tags
]
