[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "jobmon_distributor"
description="The central service responsible for "
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    'jobmon_core',
]
dynamic = ["version"]

[project.scripts]
jobmon = "jobmon.distributor.cli:main"

[project.optional-dependencies]
server = ["jobmon_server"]
ihme = ["jobmon_installer_ihme"]

[tool.setuptools]
license-files = ["../LICENSE"]

[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"
git_describe_command = [
    'git',
    'describe',
    '--dirty',
    '--tags',
    '--long',
    '--match',
    'distributor-[0-9]*',  # only match on tags prefixed with this subdirectory tags
]
